<resources>
    <string name="app_name">PasswordSafe</string>
    <string name="ok_button_text">OK</string>
    <string name="password_msg">Please Enter Password</string>
    <string name="error_msg">ERROR! incorrect password!</string>
    <string name="pass">password</string>
    <string name="name">username</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="SiteName">name of site</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="onClickLogin">LoginButtonOnClick</string>
    <string name="settings">Settings</string>
    <string name="themes">Themes</string>
    <string name="lightTheme">LIght Theme</string>
    <string name="languages">Languages</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="customTheme">Custom Theme</string>
    <string name="back">Back</string>
    <string name="backMsg">Prees back to exit</string>
    <string name="appInfo">created by Asa klein</string>
    <string name="contact">you can contact me in the email: ---</string>
    <string name="about">About</string>
</resources>
