<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkDialogBackground"
    android:minWidth="400dp"
    android:minHeight="200dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/siteNameOnAdd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/SiteName"
        android:inputType=""
        android:isScrollContainer="false"
        android:textColor="@android:color/white"
        android:textColorHint="@color/darkHint" />

    <EditText
        android:id="@+id/usernameOnAdd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/name"
        android:textColor="@android:color/white"
        android:textColorHint="@color/darkHint"
        android:inputType="" />

    <EditText
        android:id="@+id/passOnAdd"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType=""
        android:textColor="@android:color/white"
        android:textColorHint="@color/darkHint" />

    <Button
        android:id="@+id/okButtonOnAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/green_round_button"
        android:gravity="center"
        android:text="@string/ok_button_text"
        android:textColor="@android:color/white" />

</LinearLayout>