<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:id="@+id/Themes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/themes"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:text="@string/languages"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Switch
            android:id="@+id/darkThemeSwitch"
            android:layout_width="250sp"
            android:layout_height="0dp"
            android:layout_margin="10sp"
            android:layout_weight="0"
            android:checked="true"
            android:gravity="center"
            android:text="@string/darkTheme"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/infoOnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="@string/appInfo"
            android:textColor="@android:color/black" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>