<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackground">

    <RadioGroup
        android:id="@+id/themes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightBackground"
        android:checkedButton="@id/lightButton">

        <RadioButton
            android:id="@+id/darkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/darkTheme"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/lightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/lightTheme"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/customButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/customTheme"
            android:textColor="@android:color/black" />
    </RadioGroup>

</LinearLayout>